@@ -6,24 +6,23 @@ package io.clientcore.http.stress;
 import com.azure.perf.test.core.PerfStressOptions;
 import io.clientcore.core.http.client.DefaultHttpClientBuilder;
 import io.clientcore.core.http.models.HttpHeaderName;
-import io.clientcore.core.http.models.HttpLogOptions;
+import io.clientcore.core.http.models.HttpInstrumentationOptions;
 import io.clientcore.core.http.models.HttpMethod;
 import io.clientcore.core.http.models.HttpRequest;
 import io.clientcore.core.http.models.Response;
-import io.clientcore.core.http.pipeline.HttpLoggingPolicy;
+import io.clientcore.core.http.pipeline.HttpInstrumentationPolicy;
 import io.clientcore.core.http.pipeline.HttpPipeline;
 import io.clientcore.core.http.pipeline.HttpPipelineBuilder;
 import io.clientcore.core.http.pipeline.HttpRetryPolicy;
-import io.clientcore.core.util.ClientLogger;
+import io.clientcore.core.instrumentation.logging.ClientLogger;
 import io.clientcore.core.util.binarydata.BinaryData;
-import io.clientcore.http.jdk.httpclient.JdkHttpClientProvider;
 import io.clientcore.http.okhttp3.OkHttpHttpClientProvider;
 import io.clientcore.http.stress.util.TelemetryHelper;
 import reactor.core.publisher.Mono;
 
 import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.time.Instant;
 import java.util.concurrent.atomic.AtomicLong;
 
@@ -35,8 +34,7 @@ public class HttpPatch extends ScenarioBase<StressOptions> {
     private static final TelemetryHelper TELEMETRY_HELPER = new TelemetryHelper(HttpPatch.class);
     private static final ClientLogger LOGGER = new ClientLogger(HttpPatch.class);
     private final HttpPipeline pipeline;
-    private final URL url;
-
+    private final URI uri;
 
     // This is almost-unique-id generator. We could use UUID, but it's a bit more expensive to use.
     private final AtomicLong clientRequestId = new AtomicLong(Instant.now().getEpochSecond());
@@ -49,9 +47,9 @@ public class HttpPatch extends ScenarioBase<StressOptions> {
         super(options, TELEMETRY_HELPER);
         pipeline = getPipelineBuilder().build();
         try {
-            url = new URL(options.getServiceEndpoint());
-        } catch (MalformedURLException ex) {
-            throw LOGGER.logThrowableAsError(new IllegalArgumentException("'url' must be a valid URL.", ex));
+            uri = new URI(options.getServiceEndpoint());
+        } catch (URISyntaxException ex) {
+            throw LOGGER.logThrowableAsError(new IllegalArgumentException("'uri' must be a valid URI.", ex));
         }
     }
 
@@ -78,26 +76,23 @@ public class HttpPatch extends ScenarioBase<StressOptions> {
 
     private HttpRequest createRequest() {
         String body = "{\"id\": \"1\", \"name\": \"test\"}";
-        HttpRequest request = new HttpRequest(HttpMethod.PATCH, url).setBody(BinaryData.fromString(body));
+        HttpRequest request = new HttpRequest(HttpMethod.PATCH, uri).setBody(BinaryData.fromString(body));
         request.getHeaders().set(HttpHeaderName.CONTENT_LENGTH, String.valueOf(body.length()));
-        request.getHeaders().set(HttpHeaderName.USER_AGENT, "azsdk-java-stress");
-        request.getHeaders().set(HttpHeaderName.fromString("x-client-id"), String.valueOf(clientRequestId.incrementAndGet()));
+        request.getHeaders().set(HttpHeaderName.USER_AGENT, "clientcore-stress");
+        request.getHeaders()
+            .set(HttpHeaderName.fromString("x-client-id"), String.valueOf(clientRequestId.incrementAndGet()));
         request.getHeaders().set(HttpHeaderName.CONTENT_TYPE, "application/json");
         request.getHeaders().set(HttpHeaderName.ACCEPT, "application/json");
         return request;
     }
 
     private HttpPipelineBuilder getPipelineBuilder() {
-        HttpLogOptions logOptions = new HttpLogOptions()
-            .setLogLevel(HttpLogOptions.HttpLogDetailLevel.HEADERS);
-
-        HttpPipelineBuilder builder = new HttpPipelineBuilder()
-            .policies(new HttpRetryPolicy(), new HttpLoggingPolicy(logOptions));
+        HttpPipelineBuilder builder = new HttpPipelineBuilder().policies(new HttpRetryPolicy(),
+            new HttpInstrumentationPolicy(new HttpInstrumentationOptions()
+                .setHttpLogLevel(HttpInstrumentationOptions.HttpLogDetailLevel.HEADERS)));
 
         if (options.getHttpClient() == PerfStressOptions.HttpClientType.OKHTTP) {
             builder.httpClient(new OkHttpHttpClientProvider().getSharedInstance());
-        } else if (options.getHttpClient() == PerfStressOptions.HttpClientType.JDK) {
-            builder.httpClient(new JdkHttpClientProvider().getSharedInstance());
         } else {
             builder.httpClient(new DefaultHttpClientBuilder().build());
         }
